--- a/index.html
+++ b/index.html
@@ -466,7 +466,9 @@
 
 				ctx.fillText("Élévation", x_StartingPointFacade, 50);
 				// DESSIN DE LA FACADE
-				drawBaseRectangle(ctx, x_StartingPointFacade, y_StartingPointFacade, oneSquareSize, resultSquareHeight, resultSquareWidth);
+				drawBaseRectangle(ctx, x_StartingPointFacade, y_StartingPointFacade, oneSquareSize, resultSquareHeight, resultSquareWidth); // COLONNADE
+				drawBaseRectangle(ctx, x_StartingPointFacade, y_StartingPointFacade, oneSquareSize, -resultSquareHeight/2, resultSquareWidth); // ENTABLEMENT
+				drawBaseTriangle(ctx, x_StartingPointFacade, y_StartingPointFacade, oneSquareSize, -resultSquareHeight/2, resultSquareWidth, numberColumns); // FRONTON
 				if (numberColumns > 0 || typeTemple !== 'Aptère')
 				{
 						drawColumnHeight(ctx, x_StartingPointFacade, y_StartingPointFacade, oneSquareSize, resultSquareHeight, resultSquareWidth, numberColumns)
@@ -498,12 +500,16 @@
 
 			function drawColumnHeight(ctx, x_StartingPoint, y_StartingPoint, oneSquareSize, resultSquareHeight, resultSquareWidth, numberColumns)
 			{
+				var positionCenterColX = 0;
+				var positionCenterColY = 0;
 				for (var col = 1 ; col <= numberColumns ; col++)
 				{
+					currentColumnPositionX = x_StartingPoint-(oneSquareSize/2) + (oneSquareSize/2)*col*2; // DISTANCE PRISE PAR LES COLONNES
+					currentColumnPositionY = y_StartingPoint + (oneSquareSize/2) - (oneSquareSize/2); // PLACEMENT COLONNES LE LONG DU MUR
 					drawCircleTo(
 						ctx,
-						x_StartingPoint-(oneSquareSize/2) + (oneSquareSize/2)*col*2,
-						y_StartingPoint + (oneSquareSize/2) - (oneSquareSize/2),
+						currentColumnPositionX,
+					  currentColumnPositionY,
 						oneSquareSize/4,
 						0,
 						2 * Math.PI
@@ -547,6 +553,43 @@
 				}
 			}
 
+			function drawColonnade(ctx, fixedColumnDistanceXorY, fixedColumnPositionXorY, oneSquareSize, colIndex, cardinalSide, squareLengthOrWidth)
+			{
+				var x = 0;
+				var y = 0;
+				var variableColumnDistanceXorY = (oneSquareSize/2)*colIndex*2;
+				var A = fixedColumnDistanceXorY + variableColumnDistanceXorY;
+				var B = fixedColumnPositionXorY + oneSquareSize;
+				var C = fixedColumnPositionXorY + oneSquareSize*squareLengthOrWidth;
+
+				if (cardinalSide == 'north') {
+					x = A;
+					y = B;
+				} else if (cardinalSide == 'south') {
+					x = A;
+					y = C;
+				} else if (cardinalSide == 'west') {
+					x = B;
+					y = A;
+				} else if (cardinalSide == 'east') {
+					x = C;
+					y = A;
+				}
+
+				var columnRadius = oneSquareSize/4;
+				var startAngle = 0;
+				var endAngle = 2 * Math.PI;
+
+				drawCircleTo(
+					ctx,
+					x,
+					y,
+					columnRadius,
+					startAngle,
+					endAngle
+				);
+			}
+
 			function drawPeripteralColumns(ctx, x_StartingPoint, y_StartingPoint, oneSquareSize, resultSquareLength, resultSquareWidth, numberColumns, peripterType)
 			{
 				var ruleLongSides = 0
@@ -558,101 +601,53 @@
 					ruleLongSides = (numberColumns*2)+1;
 				}
 
+				var fixedColumnDistanceXorY = x_StartingPoint - (oneSquareSize/2);
+				var fixedColumnPositionXorY = y_StartingPoint - (oneSquareSize/2);
+				var variableColumnDistanceXorY = 0;
+				var columnRadius = oneSquareSize/4;
+
 				// DRAW SHORT SIDES
 				for (var colShort = 1 ; colShort <= numberColumns ; colShort++)
 				{
-					// DRAW NORTH
-					drawCircleTo(
-						ctx,
-						x_StartingPoint-(oneSquareSize/2) + (oneSquareSize/2)*colShort*2,
-						y_StartingPoint + oneSquareSize - (oneSquareSize/2),
-						oneSquareSize/4,
-						0,
-						2 * Math.PI
-					);
-
-					// DRAW SOUTH
-					drawCircleTo(
-						ctx,
-						x_StartingPoint-(oneSquareSize/2) + (oneSquareSize/2)*colShort*2,
-						y_StartingPoint + oneSquareSize*resultSquareLength - (oneSquareSize/2),
-						oneSquareSize/4,
-						0,
-						2 * Math.PI
-					);
+					drawColonnade(ctx, fixedColumnDistanceXorY, fixedColumnPositionXorY, oneSquareSize, colShort, 'north');
+					drawColonnade(ctx, fixedColumnDistanceXorY, fixedColumnPositionXorY, oneSquareSize, colShort, 'south', resultSquareLength);
 				}
+
 				// DRAW LONG SIDES
 				for (var colLong = 1 ; colLong <= ruleLongSides ; colLong++)
 				{
-					// DRAW WEST
-					drawCircleTo(
-						ctx,
-						y_StartingPoint + oneSquareSize - (oneSquareSize/2),
-						x_StartingPoint-(oneSquareSize/2) + (oneSquareSize/2)*colLong*2,
-						oneSquareSize/4,
-						0,
-						2 * Math.PI
-					);
-
-					// DRAW EAST
-					drawCircleTo(
-						ctx,
-						y_StartingPoint + oneSquareSize*resultSquareWidth - (oneSquareSize/2),
-						x_StartingPoint-(oneSquareSize/2) + (oneSquareSize/2)*colLong*2,
-						oneSquareSize/4,
-						0,
-						2 * Math.PI
-					);
+					drawColonnade(ctx, fixedColumnDistanceXorY, fixedColumnPositionXorY, oneSquareSize, colLong, 'west');
+					drawColonnade(ctx, fixedColumnDistanceXorY, fixedColumnPositionXorY, oneSquareSize, colLong, 'east', resultSquareWidth);
 				}
 			}
 
 			function drawOneSideColumns(ctx, x_StartingPoint, y_StartingPoint, oneSquareSize, resultSquareLength, resultSquareWidth, numberColumns, cardinalSide)
 			{
+				var fixedColumnDistanceXorY = x_StartingPoint - (oneSquareSize/2);
+				var fixedColumnPositionXorY = y_StartingPoint - (oneSquareSize/2);
+				var columnRadius = oneSquareSize/4;
+
 				for (var col = 1 ; col <= numberColumns ; col++)
 				{
 					if (cardinalSide == 'north')
 					{
-						drawCircleTo(
-							ctx,
-							x_StartingPoint-(oneSquareSize/2) + (oneSquareSize/2)*col*2,
-							y_StartingPoint + oneSquareSize - (oneSquareSize/2),
-							oneSquareSize/4,
-							0,
-							2 * Math.PI
-						);
+						drawColonnade(ctx, fixedColumnDistanceXorY, fixedColumnPositionXorY, oneSquareSize, col, 'north');
 					} else if (cardinalSide == 'south') {
-						drawCircleTo(
-							ctx,
-							x_StartingPoint-(oneSquareSize/2) + (oneSquareSize/2)*col*2,
-							y_StartingPoint + oneSquareSize*resultSquareLength - (oneSquareSize/2),
-							oneSquareSize/4,
-							0,
-							2 * Math.PI
-						);
+						drawColonnade(ctx, fixedColumnDistanceXorY, fixedColumnPositionXorY, oneSquareSize, col, 'south', resultSquareLength);
 					}
 				}
 			}
 
 			function drawTwoSidesColumns(ctx, x_StartingPoint, y_StartingPoint, oneSquareSize, resultSquareLength, resultSquareWidth, numberColumns)
 			{
+				var fixedColumnDistanceXorY = x_StartingPoint - (oneSquareSize/2);
+				var fixedColumnPositionXorY = y_StartingPoint - (oneSquareSize/2);
+				var columnRadius = oneSquareSize/4;
+
 				for (var col = 1 ; col <= numberColumns ; col++)
 				{
-					drawCircleTo(
-						ctx,
-						x_StartingPoint-(oneSquareSize/2) + (oneSquareSize/2)*col*2,
-						y_StartingPoint + oneSquareSize - (oneSquareSize/2),
-						oneSquareSize/4,
-						0,
-						2 * Math.PI
-					);
-					drawCircleTo(
-						ctx,
-						x_StartingPoint-(oneSquareSize/2) + (oneSquareSize/2)*col*2,
-						y_StartingPoint + oneSquareSize*resultSquareLength - (oneSquareSize/2),
-						oneSquareSize/4,
-						0,
-						2 * Math.PI
-					);
+					drawColonnade(ctx, fixedColumnDistanceXorY, fixedColumnPositionXorY, oneSquareSize, col, 'north');
+					drawColonnade(ctx, fixedColumnDistanceXorY, fixedColumnPositionXorY, oneSquareSize, col, 'south', resultSquareLength);
 				}
 			}
 
@@ -669,6 +664,33 @@
 
 				drawMoveTo(ctx, x_StartingPoint, y_StartingPoint);
 				drawLineTo(ctx, x_StartingPoint + oneSquareSize*resultSquareWidth, y_StartingPoint);
+			}
+
+			function drawBaseTriangle(ctx, x_StartingPoint, y_StartingPoint, oneSquareSize, resultSquareLength, resultSquareWidth, numberColumns)
+			{
+				var secretVariationSquares = (Math.sqrt(2))/resultSquareWidth;
+
+				if (resultSquareWidth > 2 && resultSquareWidth <= 4) {
+					var secretValue = Math.sqrt(2);
+				} else if (resultSquareWidth > 4 && resultSquareWidth <= 6) {
+					var secretValue = Math.sqrt(2)+secretVariationSquares;
+				} else if (resultSquareWidth > 6 && resultSquareWidth <= 8) {
+					var secretValue = Math.sqrt(2)*Math.sqrt(2);
+				} else if (resultSquareWidth > 8) {
+					var secretValue = Math.sqrt(2)*Math.sqrt(2)*Math.sqrt(2)*Math.sqrt(2);
+				}
+
+				// WEST SIDE TRIANGLE
+				drawMoveTo(ctx, x_StartingPoint, y_StartingPoint/(secretValue));
+				drawLineTo(ctx, x_StartingPoint + (oneSquareSize*resultSquareWidth)/2, y_StartingPoint/(secretValue) + oneSquareSize*resultSquareLength);
+
+				// SOUTH SIDE TRIANGLE // TODO
+				// drawMoveTo(ctx, x_StartingPoint, y_StartingPoint);
+				// drawLineTo(ctx, x_StartingPoint + oneSquareSize*resultSquareWidth, y_StartingPoint);
+
+				// EAST SIDE TRIANGLE
+				drawMoveTo(ctx, x_StartingPoint + oneSquareSize*resultSquareWidth, y_StartingPoint/(secretValue));
+				drawLineTo(ctx, x_StartingPoint + (oneSquareSize*resultSquareWidth)/2, y_StartingPoint/(secretValue) + oneSquareSize*resultSquareLength);
 			}
 
 			function drawGridOnCanvas(ctx, width, height)
