--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</br>
 				Largeur édifice : <input type="text" id="inputWidth" placeholder="4.60" size="100" title="Type in a width">
 				</br>
-				Valeur d'un pied en mètres : <input type="text" id="inputUnitValue" placeholder="0.3436" size="100" title="Type in a unit value">
+				Valeur d'un pied en m : <input type="text" id="inputUnitValue" placeholder="0.3436" size="100" title="Type in a unit value"> (si non précisé, plage de valeurs 0.294 - 0.350 m, résultat dans 'Console' via la touche F12 ou Cmd + Option + C )
 				</br>
 				Arrondi après la virgule : <select id="selectRounding">
 																		<option value="1">1</option>
