--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
 		<span id="moreDetailCalculationLength"><h3></h3></span></br></br>
 		<span id="moreDetailCalculationWidth"><h3></h3></span></br></br>
 		<span id="summary"><h3></h3></span>
+		<div id="cameraControls" style="display:none;">
+			Contrôles Caméra :</br></br>
+			<button onclick="moveCameraUp()">↑</button>
+			<button onclick="moveCameraDown()">↓</button>
+			<button onclick="moveCameraLeft()">←</button>
+			<button onclick="moveCameraRight()">→</button>
+			<button onclick="moveCameraZoomIn()">▲</button>
+			<button onclick="moveCameraZoomOut()">▼</button>
+		</div>
 		<canvas id="three_D_Canvas" style="display:none;"></canvas>
 		</br></br>
 
