cdn script to allow texturing

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/85/three.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 		<script type='text/javascript' src='assets/js/modularityActions.js'></script>
 		<script type='text/javascript' src='assets/js/readAndWriteFileActions.js'></script>
 		<script type='text/javascript' src='assets/js/3D_ModellingActions.js'></script>
